--- a/style.css
+++ b/style.css
@@ -218,12 +218,12 @@ nav a,
 .dropdown-menu {
     display: none;
     position: absolute;
-    top: 0;
+    top: calc(100% + 5px);;
     right: 0;
     background-color: white;
     padding: 1.5em;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    z-index: 1000; 
+    box-shadow: 0px 4px 6px rgba(110, 110, 110, 0.1);
+    z-index: 1; 
 }
 
 .dropdown-menu.show {
@@ -314,10 +314,6 @@ blockquote {
     border-left: 2px solid #161618;
     padding-left: 1em;
     margin-left: 0;
-    position: absolute;
-    top: calc(100% + 5px); /* Adjust the distance below the icon */
-    left: 0;
-    z-index: 1; /* Ensure the menu appears below the icon */
 }
 
 .p-quote {
@@ -467,7 +463,6 @@ button {
 .menu-toggle {
     position: relative; /* Ensure relative positioning for absolute child */
     z-index: 2; /* Ensure the icon appears above the dropdown */
-    cursor: pointer; /* Show pointer cursor for clickable element */
     width: 1.125rem;
     height: 0.75rem;
     cursor: pointer;
