--- a/style.css
+++ b/style.css
@@ -538,12 +538,13 @@ button {
         padding-right: 1em;
     }
 
-    /* .cta {
-
-    } */
+    .cta {
+        max-width: 100%;
+    }
 
     .cta-container {
-        display: none;
+        flex-direction: column;
+        max-width: 100%;
     }
 
     .footer-pages {
@@ -562,7 +563,8 @@ button {
     }
 
     footer {
-        padding-top: 2em;
+        gap: 2em;
+        padding-top: 3.5em;
         padding-bottom: 2em;
     }
     
