--- a/style.css
+++ b/style.css
@@ -35,28 +35,27 @@ header {
 .logo-container {
     display: flex;
     align-items: center;
-    gap: 0.5rem;
+    gap: 0.8em;
     cursor: pointer;
+    max-width: 100%;
+    margin-right: 3em;;
 }
 
 .join {
     display: flex;
     align-items: center;
-    gap: 0.5rem;
+    gap: 0.8em;
 }
 
 nav {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    gap: 1em;
-    margin-left: 7em;
-
+    gap: 1.5em;
 }
 
 .page {
     display: flex;
-    padding: 0.25rem 0rem;
+    padding: 0.25em 0em;
     flex-direction: row;
     align-items: center;
     gap: 0.3em;
@@ -66,7 +65,7 @@ main {
     padding: 3em;
     display: grid;
     grid-template-columns: minmax(auto, 50%) 1fr; 
-    gap: 2rem; 
+    gap: 2em; 
 }
 
 .hero {
@@ -468,10 +467,6 @@ button {
     height: 0.75rem;
     cursor: pointer;
 }
-
-.menu-toggle.clicked + .dropdown-menu {
-    display: block;
-  }
 
 @media (max-width: 780px) {
 
