--- a/style.css
+++ b/style.css
@@ -218,7 +218,7 @@ nav a,
 .dropdown-menu {
     display: none;
     position: absolute;
-    top: calc(100% + 5px);;
+    top: 0;
     right: 0;
     background-color: white;
     padding: 1.5em;
